# ai.story

./: .gitignore  CHANGELOG.md  ChatGPT_prompt.txt  ChatGPT_prompt_v1.0.txt  ChatGPT_prompt_v1.1.txt  ChatGPT_prompt_v1.4.txt  ChatGPT_prompt_v1.5.txt  ChatGPT_prompt_v2.0.txt  ChatGPT_prompt_v2.1.txt  LICENSE  MANIFEST.in  README.md  SOURCE_ONLY_CONTENTS.txt  audition.txt  conftest.py  images_tiktok.txt  images_youtube.txt  open_app.bat  package_api_policy.json  public_api_snapshot.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
audio/: API_SURFACE.md  __init__.py  __main__.py  app_api.py  app_config.py  asset_profile_utils.py  audio_story_spec.py  bgm_config.json  bgm_config_schema.py  bgm_config_utils.py  canonical_to_plain_script.py  cli.py  cli_utils.py  doctor.py  entrypoints.py  env_runtime.py  exceptions.py  gui_entry.py  handoff.py  logging_utils.py  make_audio_edge_tts.py  media_test_utils.py  model_store.py  paths.py  profile_config.py  profile_manifest_schema.py  project_cleanup.py  raw_to_plain_script.py  render_audio_app.py  render_batch_manifest.py  render_batch_runner.py  render_cli_adapter.py  render_events.py  render_job.py  render_job_repository.py  render_job_store.py  render_observers.py  render_reporting.py  runtime.py  runtime_binaries.py  (+4 more)
audio/adapters/: edge_tts.py  ffmpeg_audio_mixer.py  tts_core.py  vieneu_tts.py
audio/assets/: abbreviation_map.json  bgm_config.json
audio/gui/: __init__.py  app.py  batch.py  config_bundle.py  constants.py  helpers.py  history.py  main_panel.py  pipeline_status.py  project_tools.py  run_panel.py  service.py  settings.py  shell.py  sidebar.py  state.py  tabs.py  view_models.py  workspace.py  workspace_navigation.py  workspace_state.py
audio/pipeline/: flow_state.py  plain_script_classifier.py  plain_script_models.py  plain_script_parser.py  script_pipeline.py  segment_planner.py
audio/providers/: base.py  edge.py  registry.py
audio/services/: mix.py  render_orchestration.py  render_runtime.py  render_script.py  subtitle.py  tts_render.py
common/: model_store.py  project_cleanup.py  runtime.py
common/gui/: __init__.py  pipeline_status.py  progress_details.py  project_tools.py  state.py  workspace_handoff.py  workspace_source_outputs.py
docs/: DEPRECATIONS.md  MIGRATION_STANDALONE_PACKAGES.md  REFACTOR_CHANGE_SCOPE.md  STANDALONE_PACKAGES.md
examples/: plain_script_smoke.txt
image/: __init__.py  __main__.py  app_api.py  gui_entry.py  handoff.py  model_store.py  provider_catalog.py  provider_runtime.py  runtime.py  workflow_routing.py
image/gui/: __init__.py  app.py  common_ui.py  detector_ui.py  global_run_monitor.py  handoff_utils.py  history_utils.py  inpaint_utils.py  main_panel.py  panel_utils.py  pipeline_status.py  prompt_state.py  prompt_ui.py  result_ui.py  runtime_usage.py  service.py  settings.py  shared_state.py  sidebar.py  state.py  tabs.py  upscale.py  upscale_tab.py  view_model_utils.py  view_models.py
image/prompts/: cover_prompt.json  scene_prompt.json
image/providers/: __init__.py  comfyui_local.py  comfyui_remote.py  registry.py  stable_diffusion_local.py  stable_diffusion_remote.py
input/: climax_prompt.json  cover_prompt.json  development_prompt.json  ending_prompt.json  falling_prompt.json  farewell_prompt.json  greeting_prompt.json  intro_prompt.json  introduction_prompt.json  opening_prompt.json  outro_prompt.json  scene_prompt.json  story.json  story.txt
scripts/: build_dist.py  check_dependency_direction.py  check_independent_wheels.py  check_public_api.py  check_standalone_architecture.py  check_wheel_contents.py  clean_artifacts.bat  clean_project.py  make_clean_release.py  manage_models.py  release.bat  release.sh  release_smoke.py  run_story_to_video_e2e.py  sync_version.py
story/: app_api.py  asset_profiles.py  audio_story_spec.py  canonical_to_plain_script.py  cli.py  cli_utils.py  client.py  common.py  convert_raw_to_script.py  dedupe.py  generate_script.py  generate_script_args.py  generate_script_config.py  generate_script_runner.py  gui_entry.py  handoff.py  image_prompts.py  launcher_utils.py  llm_provider_runtime.py  llm_provider_user_config.py  llm_providers.py  logging_utils.py  model_store.py  normalization.py  orchestration.py  parsing.py  paths.py  prompting.py  repair.py  runtime.py  service.py  test_llm.py  testing.py  validate_canonical_authoring.py  validate_plain_script.py
story/gui/: __init__.py  app.py  app_defaults.py  briefs.py  diagnostics.py  errors.py  history.py  image_prompts.py  input_bundle.py  llm_test.py  main_panel.py  output_paths.py  pipeline_status.py  presets.py  project_tools.py  prompts.py  service.py  settings.py  shell.py  sidebar.py  split_jobs.py  state.py  tabs.py  video_handoff.py  view_models.py  workspace_state.py
studio/: gui_entry.py  project_tools.py  studio_gui.bat
studio/_shared/: __init__.py  cli_utils.py  image_sequence.py  model_store.py  project_cleanup.py  runtime.py  runtime_diagnostics.py
tests/: __init__.py
tests/contracts/: __init__.py  test_app_api_boundaries.py  test_asset_resolution_contracts.py  test_audio_render_temp_cleanup.py  test_audio_tts_provider_registry.py  test_audio_vieneu_device_contract.py  test_audio_voice_speed_contract.py  test_filesystem_handoffs.py  test_gui_module_structure.py  test_image_error_messages.py  test_image_generation_size_source.py  test_image_inpaint_upload_clear_contract.py  test_image_local_detail_pass_defaults.py  test_image_lora_support.py  test_image_prompt_state.py  test_image_provider_actions.py  test_image_result_ui_display.py  test_image_workflow_routing.py  (+19 more)
video/: __init__.py  __main__.py  app_api.py  asset_profile_utils.py  cli.py  cli_entry.py  cli_utils.py  command_builders.py  config.py  error_handling.py  exceptions.py  ffmpeg_runner.py  gui_entry.py  handoff.py  logging_utils.py  make_video_from_audio.py  model_store.py  paths.py  provider.py  render_slideshow.py  render_static.py  result_manifest.py  run_history.py  runtime.py  runtime_tools.py  slideshow_concat.py  story_zone_timeline.py  subtitle_filters.py  validation.py
(+63 files in other folders)
